# coloriage-magique

./: .gitignore  CHANGELOG.md  DEBUG_GIT.md  DEBUG_MC_COMMENTS.md  DEBUG_MC_STATUS.md  DEBUG_REPORT.md  GIT_WORKFLOW.md  QA_REPORT.md  README.md  REVIEW_REPORT.md  SECURITY_REPORT.md  docker-compose.yml  nginx.conf
.github/workflows/: build.yml  test.yml
.stitch/: DESIGN.md  DESIGN_V4.md  PROJECT_ID.txt  PROJECT_V4_ID.txt
.stitch/designs/v4/: 01-landing-upload.html  02-difficulty-selector.html  03-processing.html  04-result-nuancier.html
api/: API_CONTRACT.md
apps/api/: Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  main.py
apps/api/app/models/: __init__.py  job.py
apps/api/app/routes/: __init__.py  health.py  jobs.py
apps/api/app/services/: __init__.py  image_processor.py  job_store.py  pdf_generator.py  storage.py
apps/api/tests/: test_api.py  test_coverage.py  test_health.py  test_image_processor.py
apps/web/: Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/result/[jobId]/: page.tsx
apps/web/src/components/: ColorSwatchLegend.tsx  DifficultySelector.tsx  UploadZone.tsx
apps/web/src/components/__tests__/: ColorSwatchLegend.test.tsx  DifficultySelector.test.tsx  UploadZone.test.tsx
apps/web/src/lib/: api.test.ts  api.ts
architecture/: ADR.md
docs/: API.md
